--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html(ng-app='recipeCreator')
   head
     title RecipeMaker
+    link(rel="shortcut icon" href='favicon.ico' type='image/x-icon')
+    script(src='/vendors/angularjs/angular.min.js', type='text/javascript')
     link(rel='stylesheet', href='/vendors/angularcss/angular-material.min.css')
     link(rel='stylesheet', href='/stylesheets/style.min.css')
     base(href='/')
@@ -9,8 +11,8 @@ html(ng-app='recipeCreator')
     block content
     
     //- script(data-main="javascripts/app.min.js" src="javascripts/require.min.js")
-    script(src='/vendors/angularjs/angular.min.js', type='text/javascript')
     script(src='/javascripts/app.min.js', type='text/javascript')
+    script(src='/vendors/angularjs/angular-jwt.min.js' type='text/javascript')
     script(src='/vendors/angularjs/angular-route.min.js' type='text/javascript')
     script(src='/vendors/angularjs/angular-animate.min.js', type='text/javascript')
     script(src='/vendors/angularjs/angular-aria.min.js', type='text/javascript')
