--- a/client/private/savedrecipes.jade
+++ b/client/private/savedrecipes.jade
@@ -1,2 +1,2 @@
 .box.savedRecipes
-  p Saved recipes will go here
+  md-button(ng-click="getSavedRecipes()" class="md-accent md-raised md-button") Get Saved Recipes
