--- a/private/views/savedrecipes.html
+++ b/private/views/savedrecipes.html
@@ -1,1 +1,1 @@
-<div class="box savedRecipes"><p>Saved recipes will go here</p></div>
+<div class="box savedRecipes"><md-button ng-click="getSavedRecipes()" class="md-accent md-raised md-button">Get Saved Recipes</md-button></div>
