--- a/public/views/notloggedin.html
+++ b/public/views/notloggedin.html
@@ -1,1 +1,1 @@
-<div class="box savedRecipes"><p>Login for more info</p></div>
+<div layout="row" layout-align="center center" class="box savedRecipes"><h1>Login for more info</h1></div>
