--- a/views/index.jade
+++ b/views/index.jade
@@ -3,21 +3,21 @@ extends layout
 block content
   .headingDiv(class="md-primary" ng-controller="headerControl")
     header(class="headerImg")
-    md-toolbar(layout="row" layout-sm="column" ng-cloak)
-      md-menu(flex)
+    md-toolbar(layout="row" layout-sm="column" ng-cloak layout-align="center center")
+      div(class="md-toolbar-tools" flex)
         a(class="md-toolbar-tools md-button md-default-theme" href="/" layout-align="center center") Home
-        span
       md-menu(flex)
-        md-button(layout-align="center center" class="md-toolbar-tools md-button md-default-theme" ng-click="$mdOpenMenu()" aria-label="Open calculators menu") Calculate
-        md-menu-content(class="md-toolbar-tools md-default-theme" layout-align="start end")
+        a(class="md-toolbar-tools md-button md-default-theme" ng-click="$mdOpenMenu()" layout-align="center center" aria-label="Open calculators menu") Calculate
+        md-menu-content(layout-align="end end")
           md-menu-item
             a(class="md-toolbar-tools md-button md-default-theme" href='/dbsg_calc') Calc SG from DBFG
-      md-menu(flex)
+      div(class="md-toolbar-tools" flex)
         a(layout-align="center center" class="md-toolbar-tools md-button md-default-theme" href="mailto:jacobscearcy@gmail.com") Contact
-        span
-      md-menu(flex)
+        span(class="takespace")
+      div(class="md-toolbar-tools" flex)
         a(layout-align="center center" ng-hide="user.username" class="md-toolbar-tools md-button md-default-theme" href="/login") Login/Register
         a(layout-align="center center" ng-show="user.username" ng-click="logOut()" class="md-toolbar-tools md-button md-default-theme" href="/") Logout {{user.username}}
-        span
-  div(ng-view ng-cloak)
+ 
+  div(class="viewsDiv" ng-view ng-cloak)
+  
     
